individual-i386/catholicon-ms-matchcard-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-ms-matchcard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon-ms-matchcard
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-ms-matchcard
        version: v1
    spec:
      containers:
        - name: catholicon-ms-matchcard
          image: docker.io/rdomloge/catholicon-ms-matchcard-i386
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8123
          livenessProbe:
            httpGet:
              path: /matchcards/search/findByFixtureId?fixtureId=2168
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 30
