individual-i386/catholicon-ms-seasons-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-ms-seasons
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon-ms-seasons
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-ms-seasons
        version: v1
    spec:
      containers:
        - name: catholicon-ms-seasons
          image: rdomloge/catholicon-ms-seasons-armv7
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /seasons
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 30
