individual-i386/catholicon-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon
      version: v1
  template:
    metadata:
      labels:
        app: catholicon
        version: v1
    spec:
      containers:
        - name: catholicon
          image: rdomloge/catholicon-i386
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /static/html/partials/frontPage.html
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 30
