individual-i386/catholicon-ms-seasons-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-seasons-service
spec:
  selector:
    app: catholicon-ms-seasons
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
